# THESPIRAL

./: AGENTS.md  CODEX_OF_CODEX.md  CODE_CODEX  CONTRIBUTING.md  ETHICS_GUIDELINES.md  README.md  README_CODE_FUNCTION.md  README_OPERATOR.md  README_QNL_OS.md  archetype_feedback_loop.py  archetype_shift_engine.py  audio_engine.py  audio_ingestion.py  auto_retrain.py  console_interface.py  corpus_memory_logging.py  cortex_memory.py  cortex_sigil_logic.py  crown_decider.py  crown_model_launcher.sh  crown_prompt_orchestrator.py  crown_query_router.py  crown_router.py  dev-requirements.txt  docker-compose.yml  download_models.py  dsp_engine.py  emotional_state.py  emotional_tone_palette.yaml  env_validation.py  feedback_logging.py  glm_shell.py  inanna_voice.py  init_crown_agent.py  insight_matrix.json  invocation_engine.py  language_model_layer.py  launch_servants.sh  logging_config.yaml  mirror_thresholds.json  (+38 more)
INANNA_AI/: DEVELOPERS_GUIDE.md  README.md  Untitled 20445dfc251d80189f50d5b3fbb7d9d5_all.csv  Untitled 20445dfc251d80fcad6ec9607aa5b076.csv  Untitled 20445dfc251d80fcad6ec9607aa5b076_all.csv  __init__.py  adaptive_learning.py  audio_emotion_listener.py  config.py  corpus_memory.py  emotion_analysis.py  emotional_memory.py  emotional_synaptic_engine.py  existential_reflector.py  fallback_tts.py  glm_analyze.py  glm_init.py  glm_integration.py  listening_engine.py  main.py  silence_reflection.py  sonic_emotion_mapper.py  speaking_engine.py  speech_loopback_reflector.py  tts_bark.py  tts_coqui.py  tts_tortoise.py  tts_xtts.py  utils.py  voice_evolution.py  voice_layer_albedo.py
INANNA_AI_AGENT/: README_INANNA_AI_AGENT.md  __init__.py  inanna_ai.py  model.py
MUSIC_FOUNDATION/: README_INANNA_MUSIC.md  README_Music_Foundation.txt  (+1 more)
(+265 files in other folders)
