[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spiral-os"
version = "0.1.0"
description = "Spiral OS command line tools and agents"
authors = [{name = "Spiral OS Team"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "SEE LICENSE_CRYSTAL.md"}

# Runtime requirements mirrored from requirements.txt except heavy packages
# which are provided as optional extras
dependencies = [
    "openai-whisper",
    "TTS",
    "numpy",
    "scipy",
    "pandas",
    "librosa",
    "huggingface-hub",
    "sentencepiece",
    "accelerate",
    "einops",
    "scapy",
    "soundfile",
    "opensmile==2.5.1",
    "EmotiVoice==0.2.0",
    "voicefixer==0.1.3",
    "pydub",
    "requests",
    "beautifulsoup4",
    "streamlit",
    "fastapi",
    "uvicorn",
    "chromadb",
    "mlflow",
    "python-json-logger",
    "aiortc",
    "wav2lip",
    "psutil",
    "pyautogui",
    "opencv-python",
    "pytesseract",
    "selenium",
    "ultralytics",
    "langchain",
]

[project.optional-dependencies]
llm = [
    "torch>=2.1",
    "transformers>=4.38",
    "sentence-transformers",
    "stable-baselines3",
]

tts = [
    "pyttsx3",
]

# Development extras mirror dev-requirements.txt
# including testing and formatting tools
dev = [
    "pytest",
    "markdown",
    "requests",
    "fastapi",
    "beautifulsoup4",
    "pyopenssl",
    "streamlit",
    "httpx",
    "black",
    "flake8",
    "isort",
    "pre-commit",
    "psutil",
]

[project.scripts]
os-guardian = "os_guardian.cli:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "examples*"]

